--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,8 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+    - name: download text file
+      uses: actions/download-artifact@v2
+      with:
+        name: hello-artifact
+        path: hello.txt
